# CDR-24

MainRobot/: platformio.ini
MainRobot/src/: app_httpd.cpp  camera_index.h  camera_pins.h  main.cpp
plant-detection/: .gitignore  CMakeLists.txt  main.c  planted.h
plant-detection/.cache/clangd/index/: hsv.h.E18CC52F31135493.idx  main.c.A3D3DE70BCB2B329.idx
