cmake_minimum_required(VERSION 3.0.0)
project(PLANTDETECTOR VERSION 0.1.0 LANGUAGES C)

include(CTest)
enable_testing()
include_directories(external/stb)
add_executable(PLANTDETECTOR ./main.c)
target_link_libraries(PLANTDETECTOR PUBLIC stb -lm)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
